# payment-plan

./: .gitignore  Cargo.toml  Makefile  README.md  payment_plan.h  uniffi.toml
cli/: Cargo.toml  Makefile  build.rs
cli/src/: args.rs  lib.rs  main.rs
cli/src/protos/: plan.proto
cli/test/: cli_test.go  go.mod
cli/test/protos/: plan.pb.go
core/: Cargo.toml
core/src/: err.rs  lib.rs  main.rs  util.rs
core/src/calc/: amounts.rs  iof.rs  mod.rs  prepare.rs
core/src/calc/bmp/: amounts.rs  iof.rs  mod.rs  prepare.rs
core/src/calc/bmp/inner_xirr/: eir.rs  mod.rs  tec.rs
core/src/calc/inner_xirr/: eir.rs  mod.rs  tec.rs
core/src/calc/providers/: mod.rs
core/src/calc/providers/bmp/: amounts.rs  iof.rs  mod.rs  prepare.rs
core/src/calc/providers/bmp/inner_xirr/: eir.rs  mod.rs  tec.rs
core/src/calc/providers/iterative/: amounts.rs  installment.rs  iof.rs  mod.rs
core/src/calc/providers/qi_tech/: amounts.rs  installment.rs  iof.rs  mod.rs
core/src/calc/providers/simple/: amounts.rs  iof.rs  mod.rs  prepare.rs
core/src/calc/qi_tech/: amounts.rs  installment.rs  mod.rs
core/src/calc/qi_tech/inner_xirr/: mod.rs
core/src/types/: down_payment_plan.rs  mod.rs  plan.rs  reimbursement.rs
csv/: output_7543_18.csv
docs/: bin.md  cli.md  core.md  node.md  rust.md  wasm.md
generators/c_bind/: Cargo.toml
generators/c_bind/src/: lib.rs  params.rs  response.rs
generators/node/: Cargo.toml  package-lock.json  package.json
generators/node/src/: cast.rs  lib.rs  parser.rs
node/: Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
setup/: arch.sh  debian.sh
uniffi/: Cargo.toml
uniffi-bindgen/: Cargo.toml
uniffi/src/: lib.rs  params.rs  response.rs
wasm/: Cargo.toml  package-lock.json  package.json  tsconfig.json
wasm/example/: main.mjs
wasm/lib/: package-lock.json  package.json  test.mjs  vite.config.ts
wasm/lib/src/: index.d.ts  index.mjs
wasm/src/: custom_serde.rs  lib.rs
wasm/src/types/: date.rs  mod.rs  param.rs  response.rs
wasm/test/: down-payment-plan.spec.ts  next-disbursement-date.spec.ts  payment-plan.spec.ts
wasm/test/bmp/: down-payment-plan.spec.ts  payment-plan.spec.ts
wasm/test/iterative/: disbursement-date-range.spec.ts  down-payment-plan.spec.ts  get-non-business-days-between.spec.ts  payment-plan.spec.ts
wasm/test/qitech/: disbursement-date-range.spec.ts  down-payment-plan.spec.ts  get-non-business-days-between.spec.ts  next-disbursement-date.spec.ts  payment-plan.spec.ts
wasm/test/simple/: down-payment-plan.spec.ts
(+77 files in other folders)
