[package]
name = "payment_plan_cli"
version = "0.1.0"
edition = "2021"


[dependencies]
prost = "0.13.2"
core_payment_plan = { path ="../core" }
chrono = { version = "0.4.38" }
clap = { version = "4.5.17", features = ["derive"] }

[build-dependencies]
prost-build = "0.13.2"

[features]
bmp = ["core_payment_plan/bmp"]
qitech = ["core_payment_plan/qitech"]