[package]
name = "wasm_payment_plan"
version = "0.1.0"
license = "ISC"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
tsify-next = "0.5.4"
core_payment_plan = { path ="../core" }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3.70"
serde-wasm-bindgen = "0.6.5"

[features]
simple = ["core_payment_plan/simple"]
iterative = ["core_payment_plan/iterative"]