[package]
name = "payment-plan-node"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
core_payment_plan = { path ="../../core" }
neon = "1"
chrono = { version = "0.4.38" }

[features]
simple = ["core_payment_plan/simple"]
iterative = ["core_payment_plan/iterative"]